2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-01-29  Mike McCormack

        * Convert fd list to inlist to save allocs

2011-01-29  Rui Miguel Silva Seabra

        * make https not fail (that's curl's responsibility, really).

2011-01-31  Carsten Haitzler (The Rasterman)

        * Fix: ecore-evas CAN send "render done" messages even if not
        waiting for sync counter when using gl engine. new semi-sync
        mode to account for that.

2011-02-01 Mike McCormack

        * Remove SIGRT from ecore's signals since it's unused and broken

2011-02-10 Mike Blumenkrantz

        * Added some more possibly useless safety checks to ecore_con_ares

        * Implement event-driven error message api for all non-curl ecore_con
        +ECORE_CON_EVENT_CLIENT_ERROR, ECORE_CON_EVENT_SERVER_ERROR events
        +Ecore_Con_Event_Server_Error, Ecore_Con_Event_Client_Error types

        * Unify event handler code
        * Always increment server event count for client events

2011-02-11 Mike Blumenkrantz

        * Added ecore_con_client_port_get

2011-02-16 Sangho Park

	* Added ecore_file_download_full API.
